Corrige layout: envolve sidebar e main em .app-container para layout horizontal

--- a/public/modulo-financeiro.html
+++ b/public/modulo-financeiro.html
@@ -9,6 +9,7 @@
     <!-- Air Datepicker CSS removed (month selector not used) -->
 </head>
 <body>
+    <div class="app-container">
     <!-- Sidebar -->
     <nav class="sidebar">
         <div class="logo">
@@ -288,6 +289,7 @@
                 <!-- Calendário financeiro removido -->
 
         </main>
+    </div>
 
     <!-- Modal Limpeza Financeiro -->
     <div id="modal-cleanup-financeiro" class="modal">
