--- a/public/modulo-financeiro.html
+++ b/public/modulo-financeiro.html
@@ -44,18 +44,7 @@
     <!-- Main Content -->
     <main class="main-content">
         <!-- Top Bar -->
-        <header class="top-bar">
-            
-            <div class="user-info">
-                <div class="user-avatar">
-                    <i class="fas fa-user"></i>
-                </div>
-                <div class="user-details">
-                    <span class="user-name" id="user-name">Admin</span>
-                    <span class="user-role">Financeiro</span>
-                </div>
-            </div>
-        </header>
+        <!-- top-bar removido (user info) -->
 
         <!-- Dashboard Section -->
         <div class="dashboard active" id="dashboard-section">
