--- a/public/modulo-financeiro.html
+++ b/public/modulo-financeiro.html
@@ -105,15 +105,7 @@
                 <div class="vencimentos-container">
                     <h3>Vencimentos Hoje</h3>
                     <div class="vencimentos-list" id="vencimentos-hoje">
-                        <div class="vencimento-item">
-                            <div class="vencimento-info">
-                                <h4><span class="badge badge-warning">Aberto</span> Cliente Exemplo</h4>
-                                <span>Vencimento: Hoje</span>
-                            </div>
-                            <div class="vencimento-valor">
-                                R$ 1.250,00
-                            </div>
-                        </div>
+                        <!-- Carregado via JS -->
                     </div>
                 </div>
                 
